# startup

./: .gitignore  .gitlab-ci.yml  AUTHORS  ChangeLog  HACKING  Makefile.am  NEWS  README  README.md  configure.ac  xbps
conf/: Makefile.am
contrib/: Makefile.am
contrib/fish_completion/: initctl.fish
contrib/logrotate.d/: startup
contrib/vim/ftdetect/: startup.vim  upstart.vim
contrib/vim/syntax/: startup.vim  upstart.vim
debian/: changelog  control  copyright  rules  startup-tools.install  startup.dirs  startup.install  startup.postinst  systemd-graphical-session.conf  upstart-sysv.links  upstart-xsessions  upstart.install
debian/tests/: control
debian/user-conf/: xsession-init.conf
debian/xsession.d/: 00upstart  99upstart
doc/: Makefile.am
extra/: Makefile.am  dbus.c  event.c  file.c  local.c  socket.c  udev.c  upstart-socket-bridge.c  upstart-udev-bridge.c
extra/conf/: bridge-dbus.conf.in  bridge-file.conf.in  bridge-socket.conf.in  bridge-udev.conf.in  dbus.conf.in  file.conf.in  socket.conf.in  udev.conf.in
extra/conf-session/: bridge-dbus-session.conf.in  bridge-dbus-system.conf.in  bridge-dconf.conf.in  bridge-event.conf.in  bridge-file.conf.in  bridge-socket.conf.in  bridge-udev.conf.in  dbus-session.conf.in  dbus-system.conf.in  dconf.conf.in  event.conf.in  file.conf.in  re-exec.conf  socket.conf.in  udev.conf.in
extra/man/: dbus-event.7  dconf-event.7  file-event.7  socket-event.7  startup-dbus-bridge.8  startup-dconf-bridge.8  startup-event-bridge.8  startup-file-bridge.8  startup-local-bridge.8  startup-socket-bridge.8  startup-udev-bridge.8
init/: Makefile.am  conf.c  conf.h  control.c  control.h  environ.c  event.c  event.h  event_operator.c  job.c  job.h  job_class.c  job_class.h  job_process.c  job_process.h  log.c  main.c  parse_job.c  parse_job.h  paths.h  process.c  quiesce.c  state.c  system.c  xdg.c
init/man/: control-alt-delete.7  inittab.5  keyboard-request.7  power-status-changed.7  session-end.7  started.7  starting.7  startup.5  startup.7  startup.8  stopped.7  stopping.7
init/tests/: test_conf.c  test_conf_preload.sh.in  test_conf_static.c  test_control.c  test_environ.c  test_event.c  test_event_operator.c  test_job.c  test_job_class.c  test_job_process.c  test_log.c  test_main.c  test_parse_job.c  test_process.c  test_state.c  test_util.c  test_util.h  test_xdg.c
lib/: Makefile.am  run_abi_checker.sh.in
lib/tests/: test_libupstart.c
po/: POTFILES.in
scripts/: Makefile.am  init-checkconf.sh  initctl2dot.py  pyupstart.py  startup-monitor.py  upstart-monitor.py
scripts/data/: Makefile.am  startup-monitor.desktop
scripts/man/: init-checkconf.8  initctl2dot.8  startup-monitor.8
test/: Makefile.am  test_util_common.c
test/tests/: test_util_check_env.c
util/: Makefile.am  initctl.c  runlevel.c  telinit.c  utmp.c
util/conf/: initctl-notify-dbus.conf  initctl-notify-disk.conf
util/man/: initctl.8  reboot.8  runlevel.7  runlevel.8  shutdown.8  telinit.8
util/tests/: test_initctl.c  test_utmp.c
