## Process this file with automake to produce Makefile.in

EXTRA_DIST = \
	vim/syntax/upstart.vim \
	vim/ftdetect/upstart.vim \
	bash_completion/upstart \
	fish_completion/startup.fish \
	fish_completion/startup-monitor.fish \
	fish_completion/initctl.fish \
	fish_completion/initctl2dot.fish \
	fish_completion/init-checkconf.fish \
	fish_completion/start.fish \
	fish_completion/stop.fish \
	fish_completion/status.fish \
	fish_completion/reload.fish \
	fish_completion/restart.fish
